-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-ppc-aix
-
Component/s: hotspot
-
None
-
ppc
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8033033 | 9 | Goetz Lindenmaier | P4 | Resolved | Fixed | b04 |
| JDK-8045330 | 8u25 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8038528 | 8u20 | Goetz Lindenmaier | P4 | Resolved | Fixed | b08 |
| JDK-8053441 | emb-8u26 | Goetz Lindenmaier | P4 | Resolved | Fixed | b17 |
Adapt type of CMSYoungGenPerWorker as in 6843347.
- backported by
-
JDK-8033033 Adapt PPC to 6843347: Boundary values in some public GC options cause crashes
-
- Resolved
-
-
JDK-8038528 Adapt PPC to 6843347: Boundary values in some public GC options cause crashes
-
- Resolved
-
-
JDK-8045330 Adapt PPC to 6843347: Boundary values in some public GC options cause crashes
-
- Resolved
-
-
JDK-8053441 Adapt PPC to 6843347: Boundary values in some public GC options cause crashes
-
- Resolved
-