8027964: Adapt PPC to 6843347: Boundary values in some public GC options cause crashes

Reviewed-by: dholmes