hotspot/src/cpu/ppc/vm/globals_ppc.hpp
@@ -55,7 +55,7 @@ define_pd_global(bool, RewriteFrequentPairs,  true);
 define_pd_global(bool, UseMembar,             false);
 
 // GC Ergo Flags
-define_pd_global(intx, CMSYoungGenPerWorker,  16*M);  // Default max size of CMS young gen, per GC worker thread.
+define_pd_global(uintx, CMSYoungGenPerWorker, 16*M);  // Default max size of CMS young gen, per GC worker thread.
 
 
 // Platform dependent flag handling: flags only defined on this platform.
